terminino do desenvolvimento do HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <img src="./050dd090-3373-4077-90fa-874e96f71db9.jpg" alt="Imagem do criador da pagina de links, Pedro Gustavo" width="100">
          <h1>Pedro Gustavo</h1>
          <p>São Paulo, Brasil</p>
+
+        <p>"Desenvolvedor front-end viciado em leitura"</p>
+
+        <a href="https://github.com/Pedrogustavim/meus-links">GitHub</a>
+        <a href="https://www.tiktok.com/following?lang=pt-BR">Tiktok</a>
+        <a href="https://wa.me/5511993611522">Telefone</a>
+        <a href="https://instagram.com/@pdrotrick">instagram</a>
     </div>
 </body>
 </html>
