continuação do desenvolvimento do CSS e alteração de um paragráfo do HTML para strong

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div>
         <img src="./050dd090-3373-4077-90fa-874e96f71db9.jpg" alt="Imagem do criador da pagina de links, Pedro Gustavo" width="100">
          <h1>Pedro Gustavo</h1>
-         <p>São Paulo, Brasil</p>
+         
+         <strong>São Paulo, Brasil</strong>
 
         <p>"Desenvolvedor front-end viciado em leitura"</p>
 
