Adicionado o atribuito target para as ãncoras. projeto finalizado

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
         <p>"Desenvolvedor front-end viciado em leitura"</p>
 
-        <a href="https://github.com/Pedrogustavim/meus-links">GitHub</a>
-        <a href="https://www.tiktok.com/following?lang=pt-BR">Tiktok</a>
-        <a href="https://wa.me/5511993611522">Telefone</a>
-        <a href="https://instagram.com/@pdrotrick">instagram</a>
-    </div>
+        <a href="https://github.com/Pedrogustavim/meus-links" target="_blank target">GitHub</a>
+        <a href="https://www.tiktok.com/following?lang=pt-BR" target="_blank">Tiktok</a>
+        <a href="https://wa.me/5511993611522" target="_blank">Telefone</a>
+        <a href="https://instagram.com/@pdrotrick" target="_blank">instagram</a>
+    </div> targe
 </body>
 </html>
